# iris-nous

./: .env.example  .gitignore  ACCESSO_WEB.txt  APRI IL SITO.bat  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt  sblocca-rete.bat  sblocca-rete.ps1
configs/: brainflow_synthetic.yaml  default.yaml  web_local.yaml
docs/: DEPLOY.md  EEG_PRIORS.md  EXPERIMENTS.md  PRODUCT_UX.md  SESSION_CHECKLIST.md  SPOTIFY.md  TODO.md
models/: baseline.joblib
models/users/: alex.joblib  manuel.joblib
notebooks/: .gitkeep
src/bci_iot/: __init__.py  cli.py  config.py  types.py
src/bci_iot/accounts/: __init__.py  access_db.py  gender.py  messaging.py  names.py  otp.py  phone_countries.py  security.py  store.py  timefmt.py  validators.py
src/bci_iot/acquisition/: __init__.py  base.py  brainflow_source.py  factory.py  priors.py  synthetic.py
src/bci_iot/experiments/: __init__.py  metrics.py  moabb_loader.py  runner.py  surrogate.py
tests/: test_access_db.py  test_accounts.py  test_acquisition.py  test_action_map.py  test_anagrafica.py  test_artifacts.py  test_brainflow.py  test_calibration.py  test_config.py  test_context_demo.py  test_demo_api.py  test_dialogue_demo.py  test_experiments.py  test_i18n.py  test_impulse_demo.py  test_integrations.py  test_macro_folders.py  test_ml_sklearn.py  test_password_recover.py  test_phone_bridge.py  test_pipeline.py  test_pipeline_factory.py  test_preprocessing.py  test_router_ml.py  test_security.py  test_timefmt.py  test_web_api.py
tmp_cal_test/: accessi.db
tmp_cal_test/profiles/: admin.json  t.json
(+58 files in other folders)
