[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bci-iot"
version = "0.1.0"
description = "UNITO CS thesis: non-invasive BCI pipeline for smart-home and media intents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Maria Antonietta" }
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  "pyyaml>=6.0",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "itsdangerous>=2.1",
  "httpx>=0.27",
  "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "httpx>=0.27",
]
acquisition = [
  "brainflow>=5.12",
]
ml = [
  "scikit-learn>=1.4",
  "joblib>=1.3",
]
web = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
]
experiments = [
  "moabb>=1.0",
]

[project.scripts]
bci-iot = "bci_iot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
